muoni/GraalVM/language/tests/error/InvalidAssignmentInIfCond.hn
fn double(x) {
  return 2 * x;
}

fn main() {
  if (double(2) = 4) {
    42;
  }
}